scripts/nullaway/original/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8.txt
../original/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/Status.java:5: error: [NullAway] initializer method does not guarantee @NonNull field status (line 4) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Status(){}
	       ^
    (see http://t.uber.com/nullaway )
../original/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/Request.java:12: error: [NullAway] initializer method does not guarantee @NonNull fields method (line 8), url (line 9), protocol (line 10) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Request(){};
	       ^
    (see http://t.uber.com/nullaway )
../original/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/request/Method.java:5: error: [NullAway] initializer method does not guarantee @NonNull field method (line 4) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Method() {};
	       ^
    (see http://t.uber.com/nullaway )
../original/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/request/Url.java:6: error: [NullAway] initializer method does not guarantee @NonNull fields path (line 4), extension (line 5) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Url(){};
	       ^
    (see http://t.uber.com/nullaway )
../original/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/request/Protocol.java:7: error: [NullAway] initializer method does not guarantee @NonNull fields protocol (line 4), version (line 5) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Protocol(){}
	       ^
    (see http://t.uber.com/nullaway )
../original/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/request/Path.java:5: error: [NullAway] initializer method does not guarantee @NonNull field path (line 4) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Path(){};
	       ^
    (see http://t.uber.com/nullaway )
../original/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/request/Extension.java:5: error: [NullAway] initializer method does not guarantee @NonNull field extension (line 4) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Extension(){};
	       ^
    (see http://t.uber.com/nullaway )
../original/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/Date.java:10: error: [NullAway] initializer method does not guarantee @NonNull field date (line 7) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Date(){
	       ^
    (see http://t.uber.com/nullaway )
../original/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/Record.java:16: error: [NullAway] initializer method does not guarantee @NonNull fields userIp (line 10), userTime (line 11), request (line 12), userStatus (line 13), size (line 14) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Record(){}
	       ^
    (see http://t.uber.com/nullaway )
../original/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/forFile/Reader.java:24: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
10 errors
